/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-02-18  Gilles Dumortier <dgil at ieee.org>
	* Operation View: filter by year not displayed (SF bug 1626233)
	* Portfolio : edit the default VAT (SF bug 1474568)

2007-02-17  Gilles Dumortier <dgil at ieee.org>
	* Empty id/passwd : do not try to log to service
	* Switch to Notebook Experimental Feature (SF bug 1651970)
	* r571(-x): Change Portfolio : don't stay on last view (SF bug 1657836)
	* r560(-x): Change language : update twice (SF bug 1653525)
	* Operation View: Order by date and not by day (SF bug 1611501)
	* Rewrote itrade_wxoperations forms using iTradeSizedDialog
	* Rewrote itrade_wxportfolio forms using iTradeSizedDialog
	* Switch to wxPython 2.8.x - (2.6.x is not supported anymore because of
	  specific new features we will use - like SizedControls)

2007-02-12  Gilles Dumortier <dgil at ieee.org>
	* Fortuneo plugin : handle redirection (302) - but connector still not
          working because of new scheme under investigation

2007-02-11  Gilles Dumortier <dgil at ieee.org>
	* Switch to matplotlib 0.90.x

2007-02-10  Gilles Dumortier <dgil at ieee.org>
	* Split forum : French vs English

2007-02-09  Gilles Dumortier <dgil at ieee.org>
	* Stops View : some words are not translated (SF bug 1653527)
	* r560 (-x) : Caching menu :Can't erase History... (SF bug 1656130)
	* Popup Matrix-Portfolio view : Inversion operations (SF bug 1655908)

2007-02-06  Michel Legrand <m_leg at users.sourceforge.net>
	* More Portuguese translations

2007-02-04  Gilles Dumortier <dgil at ieee.org>
	* new tarball
	* r556 (-x) Money management-Attribute Error (SF bug 1651923)
	* Finish add/remove/edit stops (SF bug 1302894)
	* Operations screen : use the NumCtrl object
	* UnicodeDecodeError when click on News (SF bug 1651029)
